--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,8 +7,20 @@
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
-	
+
 	<request-character-encoding>UTF-8</request-character-encoding>
 	<response-character-encoding>UTF-8</response-character-encoding>
+
+	<servlet>
+		<servlet-name>registerSLServlet</servlet-name>
+		<servlet-class>web.servlet.RegisterSLServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>registerSLServlet</servlet-name>
+		<url-pattern>/registerSL</url-pattern>
+		<url-pattern>/REGISTER_SL</url-pattern>
+	</servlet-mapping>
 	
+
 </web-app>
