--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,12 @@
 			<artifactId>sesv2</artifactId>
 			<version>2.30.13</version>
 		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>5.1.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
